fix: remove top offset from series details for better alignment

--- a/src/styles/series-details.scss
+++ b/src/styles/series-details.scss
@@ -19,7 +19,6 @@
 
     .series-details {
       position: relative;
-      top: -30px;
       border-radius: 10px 10px 0 0;
       padding: 2rem 2.4rem;
       width: 100%;
